# sparkling-wasure

./: CMakeLists.txt  README.md  algo-env.sh.conf  cmake_params.txt  download_lidarhd.sh  run_examples.sh  run_lidarhd.sh  run_workflow.sh
datas/: liste_dalle.txt
datas/lidar_hd_crop_1/: wasure_metadata.xml
datas/lidar_hd_crop_2/: wasure_metadata_v2.xml
datas/lidar_hd_crop_w/: run.sh  wasure_metadata.xml
services/: build-unix.sh
services/cmake/: FindANN.cmake  FindCIMG.cmake  FindCRITERION.cmake  FindDDTLIB.cmake  FindDouble-conversion.cmake  FindEIGEN.cmake  FindGRAPHCUT.cmake  FindHDFS.cmake  FindLAS.cmake  FindPUGIXML.cmake  FindQPBO.cmake  FindTINYPLY.cmake
services/colorize/: colorize.py  colorize.sh  las2ply.py
services/ddt/: CMakeLists.txt
services/ddt/include/: ddt_data.hpp  ddt_params.hpp  ddt_spark_utils.hpp  ddt_stream_params.hpp  ddt_typedefs.hpp  io_ddt_stream.hpp
services/ddt/src/exe/: CMakeLists.txt  identity.cpp  main_ddt_stream.cpp
services/mesh23dtile/: environment.yml  finalize.py  mesh23dtile.py  run.sh  setup.py
services/wasure/: CMakeLists.txt  README.md
services/wasure/include/: flags.hpp  graph_cut.hpp  input_params.hpp  scanline_orient_normals.hpp  simplex_data.hpp  simplex_data_wasure.hpp  tbmrf.hpp  tbmrf_reco.hpp  typedefs_type.hpp  utils.hpp  wasure_algo.hpp  wasure_data.hpp  wasure_maths.hpp  wasure_params.hpp  wasure_typedefs.hpp  write_geojson_wasure.hpp
services/wasure/src/exe/: CMakeLists.txt  main_wasure_local.cpp  main_wasure_stream.cpp
services/wasure/src/lib/: CMakeLists.txt  maths.cpp  simplex_data.cpp  simplex_data_wasure.cpp  wasure_algo.cpp  wasure_data.cpp  wasure_datas.cpp
services/wasure/workflow/: workflow_preprocess.scala  workflow_wasure.scala
src/common/: build-unix-cmake.sh  build-unix-gen.sh
src/core/: DDT.hpp  algorithm.hpp  bbox.hpp  ddt_exeptions.hpp  tile.hpp
src/core/algo/: algo_ddt.hpp
src/core/conf/: conf.hpp.in
src/core/io/: base64.cpp  base64.hpp  count.hpp  logging.cpp  logging.hpp  logging_stream.cpp  logging_stream.hpp  number_parser.cpp  number_parser.hpp  read.hpp  read_stream.hpp  stream_api.hpp  write.hpp  write_ply.cpp  write_ply.hpp  write_stream.hpp  write_vrt.cpp  write_vrt.hpp
src/core/iterator/: Cell_const_iterator.hpp  Facet_const_iterator.hpp  Map_iterators.hpp  Vertex_const_iterator.hpp
src/core/partitioner/: const_partitioner.hpp  grid_partitioner.hpp  random_partitioner.hpp
src/core/scheduler/: multithread_scheduler.hpp  safe.hpp  scheduler.hpp  sequential_scheduler.hpp  thread_pool.hpp
src/core/traits/: Facet_const_iterator_2.hpp  Facet_const_iterator_3.hpp  Facet_const_iterator_d.hpp  cgal_traits_2.hpp  cgal_traits_3.hpp  cgal_traits_base.hpp  cgal_traits_base2.hpp  cgal_traits_d.hpp  data_cell_base.hpp  traits.hpp
src/docker/: Dockerfile-base-Ubuntu-devel  docker_interface.sh  run_bash_docker.sh
src/qgis/: CMakeLists.txt  bbox1.qml  graph_linestring.qml  graph_polygon.qml  tri1.qml  tri2.qml  tri_dst.qml  tri_main.qml  tri_seg.qml  vert1.qml
src/scala/: run_algo_spark.sh
src/spark/: build-unix.sh  build.sbt  export_env.sh  spark.sh
src/spark/project/: plugins.sbt
src/spark/src/main/scala/scheduler_spark/: iqlib-algo.scala  iqlib-core.scala  iqlib-util.scala  wasure-algo.scala
src/spark/src/main/scala/sparkle/graph/: BP.scala  Factor.scala  PairwiseBP.scala  TwoStateBP.scala  Utils.scala
src/spark/src/main/scala/tiling/: tiling_struct.scala
